# hypnotix

./: .gitignore  Makefile  README.md  ReadMe_German.md  generate_desktop_files  hypnotix.pot  makepot  meson.build  test
.github/workflows/: build.yml
debian/: changelog  control  copyright  postinst  rules
install-scripts/: meson.build
po/: LINGUAS  hypnotix-am.po  hypnotix-ar.po  hypnotix-ast.po  hypnotix-be.po  hypnotix-bg.po  hypnotix-br.po  hypnotix-ca.po  hypnotix-cs.po  hypnotix-cy.po  hypnotix-da.po  hypnotix-de.po  hypnotix-el.po  hypnotix-en_CA.po  hypnotix-en_GB.po  hypnotix-eo.po  hypnotix-es.po  hypnotix-et.po  hypnotix-eu.po  hypnotix-fa.po  hypnotix-fi.po  hypnotix-fil.po  hypnotix-fr.po  hypnotix-fr_CA.po  hypnotix-he.po  hypnotix-hi.po  hypnotix-hr.po  hypnotix-hu.po  hypnotix-ia.po  hypnotix-id.po  hypnotix-ie.po  hypnotix-is.po  hypnotix-it.po  hypnotix-ja.po  hypnotix-ka.po  hypnotix-kab.po  hypnotix-kn.po  hypnotix-ko.po  hypnotix-la.po  hypnotix-lo.po  (+29 more)
usr/: meson.build
usr/lib/hypnotix/: common.py  hypnotix.py  mpv.py  xtream.py
usr/share/: meson.build
usr/share/applications/: hypnotix.desktop
usr/share/glib-2.0/schemas/: org.x.hypnotix.gschema.xml
usr/share/hypnotix/: countries.list  hypnotix.css  hypnotix.ui  shortcuts.ui
usr/share/hypnotix/pictures/badges/: README
