install_subdir('applications',
    install_dir: join_paths(get_option('datadir'), 'applications')
)

install_subdir('glib-2.0/schemas',
    install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas')
)

install_subdir('hypnotix',
    install_dir: join_paths(get_option('datadir'), 'hypnotix')
)

install_subdir('icons/hicolor',
    install_dir: join_paths(get_option('datadir'), 'icons'),
)
